--- a/css/index_767.css
+++ b/css/index_767.css
@@ -495,7 +495,7 @@ table {
 
     #postBox {
         width: 100%;
-        height: 2000px;
+        height: 230vh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
