--- a/css/index_767.css
+++ b/css/index_767.css
@@ -454,7 +454,7 @@ table {
     /* performance post */
     #wrap3PerformancePost {
         width: 100%;
-        height: 260vh;
+        height: 400vh;
         padding: 10px 0;
         position: relative;
     }
@@ -495,15 +495,15 @@ table {
 
     #postBox {
         width: 100%;
-        height: 230vh;
+        height: 370vh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
 
     .posts {
-        width: 85%;
-        height: 120vh;
+        width: 90%;
+        height: 185vh;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -596,7 +596,7 @@ table {
 
     #morePost {
         width: 100%;
-        margin: 0px auto;
+        margin: 20px auto 0;
     }
 
     .viewPost {
