--- a/css/blog.css
+++ b/css/blog.css
@@ -15,6 +15,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'EarlyFontDiary';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_220508@1.0/EarlyFontDiary.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* reset */
 * {
     margin: 0;
@@ -49,6 +56,14 @@ body{
     background-position: 10% 70%;
 }
 
+::selection{
+    background: rgba(241, 139, 30, 0.4);
+}
+
+::-moz-selection{
+    background: rgba(241, 139, 30, 0.4);
+}
+
 #blog{
     width: 100%;
     height: 300px;
@@ -77,31 +92,33 @@ body{
 
 #blogContent{
     width: 1200px;
-    height: 2000px;
+    height: auto;
     margin: 0 auto;
     border: 1px solid yellowgreen;
     display: flex;
-    background-color: rosybrown;
+    margin-bottom: 150px;
 }
 
 #postContent{
     width: 70%;
     height: 100%;
     border: 1px solid red;
-    background-color: darkturquoise;
 }
 
 #content{
     width: 95%;
-    height: 1500px;
-    background-color: white;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.9);
     margin: 0 auto;
+    padding-bottom: 50px;
+    border: 2px solid lightgray;
+    border-radius: 10px;
 }
 
 #contentImg{
-    width: 100%;
+    width: 95%;
+    margin: 15px auto 0;
     height: 500px;
-    background-color: #F06477;
 }
 
 #contentImg img{
@@ -116,6 +133,13 @@ body{
     padding-top: 30px;
 }
 
+#contentText span a{
+    color: #f18b1e;
+    font-weight: bold;
+    font-family: 'EarlyFontDiary';
+    letter-spacing: 2px;
+}
+
 #contentText h2{
     font-weight: bold;
     font-size: 32px;
@@ -123,12 +147,348 @@ body{
 
 .synopsis{
     border-left: 5px solid #f18b1e;
-    padding: 5px 0 5px 15px;
+    padding: 15px 0 15px 15px;
     background-color: rgba(241, 139, 30, 0.1);
+    border-radius: 0 40px 0 0;
+}
+
+#writerBox{
+    width: 100%;
+    height: 180px;
+    border: 1px solid #f18b1e;
+    margin-top: 150px;
+    display: flex;
+    background-color: rgba(255, 227, 184, 0.5);
+    border-radius: 5px 40px 5px 40px;
+}
+
+#writerBox:hover{
+    box-shadow: 2px 2px 10px 10px rgba(161, 161, 161, 0.1);
+}
+
+#writerImage{
+    width: 25%;
+    height: 100%;
+    position: relative;
+}
+
+.writeCardImage{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 4.5px double #f18b1e;
+}
+
+.writeCardImage a, .writeCardImage a img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+#writerText{
+    width: 75%;
+    height: 100%;
+    padding: 15px;
+    background-color: white;
+    border-radius: 0 40px 5px 0 ;
+}
+
+#writerText>span:nth-child(1){
+    font-size: 20px;
+    width: 55px;
+    text-align: center;
+    display: inline-block;
+    border-bottom: 3px solid #f18b1e;
+}
+
+.fa{
+    font-size: 15px;
+    color: rgb(189, 184, 184);
+}
+
+.fa-heart{
+    color: red;
+}
+
+.favicon{
+    font-family: 'GowunDodum-Regular';
+    font-weight: 500;
+    color: rgb(189, 184, 184);
+}
+
+#buttonBox{
+    width: 100%;
+    height:80px;
+    margin-top: 50px;
+    position: relative;
+}
+
+.prev{
+    float: left;
+    width: 180px;
+    height: 50px;
+    font-family: 'GowunDodum-Regular';
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 50px;
+    position: relative;
+    display: block;
+    perspective: 10000px;
+    color: #fff;
+}
+
+a.prev::before, a.prev::after{
+    content: attr(title);
+    display: block;
+    position: absolute;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 50px;
+    transition: all 0.3s;
+    font-size: 18px;
+}
+
+a.prev::before{
+    background: linear-gradient(to right top, #FEC325,#f18b1e, #F06477);
+}
+
+a.prev::after{
+    border: 3px solid #f18b1e;
+    color: #333;
+    transform: rotateX(90deg) translateZ(50px);
+    transform-origin: 50% 100%;
+}
+
+a.prev:hover::before{
+    transform: rotateX(-90deg) translateZ(50px);
+    transform-origin: 50% 00%;
+}
+
+a.prev:hover::after{
+    transform: rotateX(0deg) translateZ(0px);
+    box-shadow: 1px 1px 15px 10px rgba(161, 161, 161, 0.1);
+}
+
+.next{
+    float: right;
+    width: 180px;
+    height: 50px;
+    font-family: 'GowunDodum-Regular';
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 5px;
+    line-height: 50px;
+    position: relative;
+    display: block;
+    perspective: 10000px;
+    color: #fff;
+}
+
+a.next::before, a.next::after{
+    content: attr(title);
+    display: block;
+    position: absolute;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 50px;
+    transition: all 0.3s;
+    font-size: 18px;
+}
+
+a.next::before{
+    background: linear-gradient(to left bottom,#FEC325,#f18b1e, #F06477);
+}
+
+a.next::after{
+    border: 3px solid #f18b1e;
+    color: #333;
+    transform: rotateX(90deg) translateZ(50px);
+    transform-origin: 50% 100%;
+}
+
+a.next:hover::before{
+    transform: rotateX(-90deg) translateZ(50px);
+    transform-origin: 50% 00%;
+}
+
+a.next:hover::after{
+    transform: rotateX(0deg) translateZ(0px);
+    box-shadow: 1px 1px 15px 10px rgba(161, 161, 161, 0.1);
+}
+
+#comment{
+    width: 95%;
+    height: auto;
+    margin: 20px auto 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+}
+
+#commentTitle{
+    width: 100%;
+    height: 80px;
+    border: 1px solid red;
+    padding: 10px;
+}
+
+#commentTitle h1{
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.comment_fa{
+    padding-left: 10px;
+    font-size: 18px;
+    color: #f18b1e;
+}
+
+.comment_fa span{
+    font-size: 18px;
+    color: #f18b1e;
+    font-weight: bold;
+}
+
+.commentContent{
+    width: 100%;
+    height: 200px;
+    border: 2px solid yellowgreen;
+}
+
+#commentPost{
+    width: 100%;
+    height: 400px;
+    border: 2px solid deepskyblue;
 }
 
 #postNavigation{
     width: 30%;
-    height: 100%;
+    height: auto;
     border: 1px solid blue;
+}
+
+#postSearch{
+    width: 100%;
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+#blogSearch{
+    padding: 5px;
+    display: block;
+    margin: 15px auto 0;
+    width: 80%;
+    border: none;
+    border-bottom: 1px solid #ccc;
+}
+
+#popularPost{
+    width: 100%;
+    height: 330px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+#popularImg{
+    width: 90%;
+    margin: 10px auto 0;
+    height: 180px;
+    border: 1px solid red;
+}
+
+#popularContent{
+    width: 90%;
+    margin: 5px auto 0;
+    height: 80px;
+    border: 1px solid red;
+}
+
+#popularPosts{
+    width: 100%;
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+.subPosts{
+    width: 90%;
+    height: 28%;
+    margin: 10px auto 0;
+    border: 1px solid lawngreen;
+}
+
+#newsLetter{
+    width: 100%;
+    height: 180px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+#subcribeEmail{
+    display: block;
+    margin: 10px auto;
+    width: 90%;
+    height: 40px;
+    border: 1px solid lightgray;
+}
+
+#category{
+    width: 100%;
+    height: 340px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
+.subCategory{
+    width: 90%;
+    margin: 10px auto 0;
+    height: 20%;
+    border: 1px solid #7E81BE;
+}
+
+#tag{
+    width: 100%;
+    height: 300px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#tagBox{
+    width: 90%;
+    height: 85%;
+    margin: 10px auto 0;
+    border: 1px solid blueviolet;
 }
