--- a/css/blog.css
+++ b/css/blog.css
@@ -416,8 +416,66 @@ a.next:hover::after{
 
 #commentPost{
     width: 100%;
-    height: 400px;
-    border: 2px solid deepskyblue;
+    height: auto;
+    padding-bottom: 40px;
+    padding-left: 20px;
+}
+
+#commentPost h1{
+    font-size: 35px;
+    font-weight: bold;
+}
+
+#commentPost form{
+    margin: 30px auto 0;
+    padding: 10px 0 10px 0;
+    width: 90%;
+    height: auto;
+    display: flex;
+    vertical-align: center;
+    align-items: center;
+    flex-direction: row;
+    background-color: rgba(255, 227, 184, 0.5);
+    border-radius: 10px;
+    flex-wrap: wrap;
+}
+
+#commentPost form input{
+    padding: 10px;
+    width: 310px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    margin: 20px auto 20px;
+}
+
+#commentPost form textarea{
+    width: 95%;
+    height: 150px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    resize: vertical;
+    margin: 0 auto;
+}
+
+.commentButtonBox{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    background-color: red;
+}
+
+.commentSubject{
+    width: 30%;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
 }
 
 #postNavigation{
@@ -552,6 +610,13 @@ a.next:hover::after{
     padding: 10px;
 }
 
+#newsLetter input::placeholder{
+    text-align: center;
+    font-weight: 300;
+    font-size: 13px;
+    color: #bbb;
+}
+
 .buttonBox{
     width: 100%;
     height: 50%;
@@ -577,7 +642,7 @@ a.next:hover::after{
 }
 
 .fun-btn{
-    background-color: #f18b1e;
+    background: linear-gradient(to left bottom,#FEC325,#f18b1e, #F06477);
     color: white;
     padding: 1em 3em;
     border: none;
@@ -628,7 +693,7 @@ a.next:hover::after{
 
 #category{
     width: 100%;
-    height: 340px;
+    height: 250px;
     background-color: rgba(255, 255, 255, 0.9);
     border: 2px solid lightgray;
     border-radius: 10px;
@@ -639,13 +704,50 @@ a.next:hover::after{
 .subCategory{
     width: 90%;
     margin: 10px auto 0;
-    height: 20%;
-    border: 1px solid #7E81BE;
+    height: 40px;
+    position: relative;
+    background: linear-gradient(to left bottom,#FEC325,#f18b1e, #F06477);
+    line-height: 40px;
+    transition: 0.5s all;
+    overflow: hidden;
+}
+
+.subCategory:hover{
+    transform: scale(1.1);
+}
+
+.subCategory::after{
+    content: '';
+    position: absolute;
+    top: calc(50% - 50px);
+    left: -50px;
+    width: 20px;
+    height: 100px;
+    background-color: white;
+    -webkit-transform: rotate(30deg);
+    transform: rotate(30deg);
+    -webkit-transition: all 1000ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 1000ms cubic-bezier(0.23, 1, 0.32, 1);
+    opacity: 0;
+}
+
+.subCategory:hover::after{
+    left: calc(100% + 50px);
+    opacity: 1;
+}
+
+.subCategory h3{
+    font-weight: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
 }
 
 #tag{
     width: 100%;
-    height: 300px;
+    height: 250px;
     background-color: rgba(255, 255, 255, 0.9);
     border: 2px solid lightgray;
     border-radius: 10px;
@@ -655,9 +757,36 @@ a.next:hover::after{
 
 #tagBox{
     width: 90%;
-    height: 85%;
+    height: 180px;
     margin: 10px auto 0;
-    border: 1px solid blueviolet;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 10px 0 0 10px;
+}
+
+.buttonTag{
+    width: 70px;
+    height: 30px;
+    margin: 0 5px 0 5px;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    counter-reset: #333;
+    background-color: rgba(255, 227, 184, 0.5);
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+
+.buttonTag:hover{
+    background: linear-gradient(to left bottom,#FEC325,#f18b1e, #F06477);
+    box-shadow: 0px 15px 20px rgba(241, 139, 30, 0.3);
+    color: #fff;
+    transform: translateY(-4px);
 }
 
 #map{
