--- a/css/blog_1249.css
+++ b/css/blog_1249.css
@@ -101,7 +101,7 @@ table {
 /* blog 큰사이즈 시작 */
 /* blog 서브 타이틀 제목 */
 
-@media screen and (min-width:1250px) {
+@media screen and (min-width:992px) and (max-width:1249px) {
     body {
         background-image: url(../img/index/middle_logo.png);
         background-size: contain;
@@ -126,7 +126,7 @@ table {
     }
 
     #blog h1 {
-        font-size: 3.2em;
+        font-size: 2.6em;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -144,7 +144,7 @@ table {
     }
 
     #blogContent {
-        width: 1200px;
+        width: 100%;
         height: auto;
         margin: 0 auto;
         display: flex;
@@ -193,12 +193,12 @@ table {
 
     #contentText h2 {
         font-weight: bold;
-        font-size: 32px;
+        font-size: 1.6em;
     }
 
     .synopsis {
         border-left: 5px solid #f18b1e;
-        padding: 15px 0 15px 15px;
+        padding: 15px 15px 15px 15px;
         background-color: rgba(241, 139, 30, 0.1);
         border-radius: 0 40px 0 0;
     }
@@ -612,6 +612,7 @@ table {
     #postNavigation {
         width: 30%;
         height: auto;
+        margin-right: 1%;
     }
 
     #postSearch {
@@ -699,7 +700,7 @@ table {
 
     #popularPosts {
         width: 100%;
-        height: 400px;
+        height: auto;
         background-color: rgba(255, 255, 255, 0.9);
         border: 2px solid lightgray;
         border-radius: 10px;
@@ -729,7 +730,7 @@ table {
 
     .subPosts a h2 {
         font-weight: bold;
-        font-size: 18px;
+        font-size: 0.9rem;
         padding: 3px;
     }
 
@@ -737,13 +738,13 @@ table {
         color: #f18b1e;
         font-weight: bold;
         font-family: 'EarlyFontDiary';
-        letter-spacing: 2px;
+        letter-spacing: 1%;
         font-size: 13px;
         padding: 1px 0 0 10px;
     }
 
     .subPosts .fa {
-        font-size: 13px;
+        font-size: 0.6em;
         padding: 8px 0 0 13px;
     }
 
@@ -899,7 +900,7 @@ table {
     }
 
     .subCategory h3 {
-        font-size: 20px;
+        font-size: 1.1em;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -910,7 +911,7 @@ table {
 
     #tag {
         width: 100%;
-        height: 250px;
+        height: auto;
         background-color: rgba(255, 255, 255, 0.9);
         border: 2px solid lightgray;
         border-radius: 10px;
@@ -925,18 +926,18 @@ table {
 
     #tagBox {
         width: 90%;
-        height: 180px;
+        height: auto;
         margin: 10px auto 0;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        padding: 10px 0 0 10px;
+        padding: 10px 30px;
     }
 
     .buttonTag {
         width: 70px;
         height: 30px;
-        margin: 0 5px 0 5px;
+        margin: 5px 2px 5px 2px ;
         font-size: 12px;
         letter-spacing: 2.5px;
         font-weight: 500;
