--- a/css/blog_991.css
+++ b/css/blog_991.css
@@ -101,7 +101,7 @@ table {
 /* blog 큰사이즈 시작 */
 /* blog 서브 타이틀 제목 */
 
-@media screen and (min-width:1250px) {
+@media screen and (min-width:768px) and (max-width:991px) {
     body {
         background-image: url(../img/index/middle_logo.png);
         background-size: contain;
@@ -126,7 +126,7 @@ table {
     }
 
     #blog h1 {
-        font-size: 3.2em;
+        font-size: 2em;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -144,7 +144,7 @@ table {
     }
 
     #blogContent {
-        width: 1200px;
+        width: 100%;
         height: auto;
         margin: 0 auto;
         display: flex;
@@ -169,7 +169,7 @@ table {
     #contentImg {
         width: 95%;
         margin: 15px auto 0;
-        height: 500px;
+        height: 400px;
     }
 
     #contentImg img {
@@ -189,16 +189,17 @@ table {
         font-weight: bold;
         font-family: 'EarlyFontDiary';
         letter-spacing: 2px;
+        font-size: 13px;
     }
 
     #contentText h2 {
         font-weight: bold;
-        font-size: 32px;
+        font-size: 1.25em;
     }
 
     .synopsis {
         border-left: 5px solid #f18b1e;
-        padding: 15px 0 15px 15px;
+        padding: 15px 15px 15px 15px;
         background-color: rgba(241, 139, 30, 0.1);
         border-radius: 0 40px 0 0;
     }
@@ -441,8 +442,8 @@ table {
     }
 
     .commentImgCard {
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         position: absolute;
         border: 1px solid #f18b1e;
         top: 50%;
@@ -612,6 +613,7 @@ table {
     #postNavigation {
         width: 30%;
         height: auto;
+        margin-right: 1%;
     }
 
     #postSearch {
@@ -640,7 +642,7 @@ table {
 
     #popularPost {
         width: 100%;
-        height: 330px;
+        height: auto;
         background-color: rgba(255, 255, 255, 0.9);
         border: 2px solid lightgray;
         border-radius: 10px;
@@ -651,7 +653,7 @@ table {
     #popularImg {
         width: 90%;
         margin: 10px auto 0;
-        height: 180px;
+        height: 150px;
         border: 2px solid rgba(255, 227, 184, 0.5);
         border-radius: 10px;
     }
@@ -690,16 +692,16 @@ table {
         font-weight: bold;
         font-family: 'EarlyFontDiary';
         letter-spacing: 2px;
-        font-size: 13px;
+        font-size: 10.5px;
     }
 
     #popularContent .fa {
-        font-size: 13px;
+        font-size: 10px;
     }
 
     #popularPosts {
         width: 100%;
-        height: 400px;
+        height: auto;
         background-color: rgba(255, 255, 255, 0.9);
         border: 2px solid lightgray;
         border-radius: 10px;
@@ -729,7 +731,7 @@ table {
 
     .subPosts a h2 {
         font-weight: bold;
-        font-size: 18px;
+        font-size: 0.9rem;
         padding: 3px;
     }
 
@@ -737,13 +739,13 @@ table {
         color: #f18b1e;
         font-weight: bold;
         font-family: 'EarlyFontDiary';
-        letter-spacing: 2px;
+        letter-spacing: 1%;
         font-size: 13px;
         padding: 1px 0 0 10px;
     }
 
     .subPosts .fa {
-        font-size: 13px;
+        font-size: 10px;
         padding: 8px 0 0 13px;
     }
 
@@ -850,7 +852,7 @@ table {
 
     #category {
         width: 100%;
-        height: 250px;
+        height: auto;
         background-color: rgba(255, 255, 255, 0.9);
         border: 2px solid lightgray;
         border-radius: 10px;
@@ -899,7 +901,7 @@ table {
     }
 
     .subCategory h3 {
-        font-size: 20px;
+        font-size: 0.85em;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -910,7 +912,7 @@ table {
 
     #tag {
         width: 100%;
-        height: 250px;
+        height: auto;
         background-color: rgba(255, 255, 255, 0.9);
         border: 2px solid lightgray;
         border-radius: 10px;
@@ -925,18 +927,18 @@ table {
 
     #tagBox {
         width: 90%;
-        height: 180px;
+        height: auto;
         margin: 10px auto 0;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        padding: 10px 0 0 10px;
+        padding: 10px 5px;
     }
 
     .buttonTag {
         width: 70px;
         height: 30px;
-        margin: 0 5px 0 5px;
+        margin: 5px 2px 5px 2px ;
         font-size: 12px;
         letter-spacing: 2.5px;
         font-weight: 500;
@@ -978,7 +980,7 @@ table {
 
     #mapBox {
         width: 90%;
-        height: 85%;
+        height: 75%;
         margin: 10px auto 0;
         border: 2px solid rgba(255, 227, 184, 0.5);
         border-radius: 10px;
