--- a/css/blog_767.css
+++ b/css/blog_767.css
@@ -126,7 +126,7 @@ table {
     }
 
     #blog h1 {
-        font-size: 2em;
+        font-size: 18px;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -141,6 +141,7 @@ table {
         color: transparent;
         font-weight: bold;
         display: inline-block;
+        font-size: 25px;
     }
 
     #blogContent {
@@ -148,12 +149,14 @@ table {
         height: auto;
         margin: 0 auto;
         display: flex;
+        flex-direction: column;
         margin-bottom: 150px;
     }
 
     #postContent {
-        width: 70%;
+        width: 95%;
         height: 100%;
+        margin: 0 auto;
     }
 
     #content {
@@ -169,7 +172,7 @@ table {
     #contentImg {
         width: 95%;
         margin: 15px auto 0;
-        height: 400px;
+        height: 60vw;
     }
 
     #contentImg img {
@@ -229,11 +232,12 @@ table {
         position: relative;
         background-color: rgba(255, 227, 184, 0.5);
         border-radius: 5px 0 0 40px;
+        display: none;
     }
 
     .writeCardImage {
-        width: 100px;
-        height: 100px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background-color: white;
         position: absolute;
@@ -251,19 +255,23 @@ table {
     }
 
     #writerText {
-        width: 75%;
+        width: 100%;
         height: 100%;
         padding: 15px;
         background-color: white;
-        border-radius: 0 40px 5px 0;
+        border-radius: 5px 40px 5px 40px;
     }
 
     #writerText>span:nth-child(1) {
-        font-size: 20px;
+        font-size: 18px;
         width: 55px;
         text-align: center;
         display: inline-block;
         border-bottom: 3px solid #f18b1e;
+    }
+
+    #writerText h1{
+        font-size: 25px;
     }
 
     .fa {
@@ -283,9 +291,11 @@ table {
 
     #buttonBox {
         width: 100%;
-        height: 80px;
+        height: auto;
         margin-top: 50px;
         position: relative;
+        display: flex;
+        flex-direction: column;
     }
 
     .prev {
@@ -342,6 +352,8 @@ table {
     }
 
     .next {
+        align-self: flex-end;
+        margin-top: 20px;
         float: right;
         width: 180px;
         height: 50px;
@@ -428,7 +440,7 @@ table {
 
     .commentContent {
         width: 100%;
-        height: 150px;
+        height: auto;
         margin: 5px 0 5px 0;
         display: flex;
         background-color: rgba(212, 209, 209, 0.1);
@@ -436,14 +448,14 @@ table {
 
     .commentImg {
         width: 20%;
-        height: 100%;
+        height: auto;
         position: relative;
         background-color: white;
     }
 
     .commentImgCard {
-        width: 80px;
-        height: 80px;
+        width: 50px;
+        height: 6vh;
         position: absolute;
         border: 1px solid #f18b1e;
         top: 50%;
@@ -460,7 +472,7 @@ table {
 
     .commentText {
         width: 80%;
-        height: 100%;
+        height: auto;
         padding: 10px 10px 10px 30px;
     }
 
@@ -558,12 +570,12 @@ table {
     }
 
     #commentPost form input {
-        padding: 10px;
-        width: 310px;
+        padding: 20px;
+        width: 90%;
         height: 40px;
         border: none;
         border-radius: 10px;
-        margin: 20px auto 20px;
+        margin: 10px auto;
         font-family: 'NanumBarunGothic', sans-serif;
     }
 
@@ -574,7 +586,7 @@ table {
         border-radius: 10px;
         padding: 10px;
         resize: vertical;
-        margin: 0 auto;
+        margin: 15px auto 0;
         font-family: 'NanumBarunGothic', sans-serif;
     }
 
@@ -611,9 +623,9 @@ table {
     }
 
     #postNavigation {
-        width: 30%;
+        width: 90%;
         height: auto;
-        margin-right: 1%;
+        margin: 50px auto 10px;
     }
 
     #postSearch {
