--- a/css/blog_767.css
+++ b/css/blog_767.css
@@ -165,7 +165,6 @@ table {
         background-color: rgba(255, 255, 255, 0.9);
         margin: 0 auto;
         padding-bottom: 50px;
-        border: 2px solid lightgray;
         border-radius: 10px;
     }
 
@@ -220,8 +219,6 @@ table {
         box-shadow: 2px 2px 10px 10px rgba(161, 161, 161, 0.1);
         border: 3px solid transparent;
         border-radius: 5px 40px 5px 40px;
-        background-image: linear-gradient(transparent),
-            linear-gradient(to right, #c67d84, #7E81BE, #559FD3, #7AC142, #FEC325, #F68932, #F06477);
         background-origin: border-box;
         background-clip: content-box, border-box;
     }
@@ -270,7 +267,7 @@ table {
         border-bottom: 3px solid #f18b1e;
     }
 
-    #writerText h1{
+    #writerText h1 {
         font-size: 25px;
     }
 
@@ -291,15 +288,14 @@ table {
 
     #buttonBox {
         width: 100%;
-        height: auto;
+        height: 50px;
         margin-top: 50px;
         position: relative;
-        display: flex;
-        flex-direction: column;
     }
 
     .prev {
         float: left;
+        margin-top: 20px;
         width: 180px;
         height: 50px;
         font-family: 'GowunDodum-Regular';
@@ -352,7 +348,6 @@ table {
     }
 
     .next {
-        align-self: flex-end;
         margin-top: 20px;
         float: right;
         width: 180px;
@@ -409,8 +404,7 @@ table {
         width: 95%;
         height: auto;
         margin: 20px auto 0;
-        background-color: rgba(255, 255, 255, 0.9);
-        border: 2px solid lightgray;
+        background-color: rgba(255, 255, 255, 0.1);
         border-radius: 10px;
     }
 
@@ -443,7 +437,8 @@ table {
         height: auto;
         margin: 5px 0 5px 0;
         display: flex;
-        background-color: rgba(212, 209, 209, 0.1);
+        background-color: rgba(255, 227, 184, 0.5);
+        border-radius: 5px 40px 5px 40px;
     }
 
     .commentImg {
@@ -451,6 +446,12 @@ table {
         height: auto;
         position: relative;
         background-color: white;
+        border-radius: 5px 40px 5px 40px;
+    }
+
+    .b,
+    .d {
+        margin-bottom: 50px;
     }
 
     .commentImgCard {
@@ -750,7 +751,7 @@ table {
         color: #f18b1e;
         font-weight: bold;
         font-family: 'EarlyFontDiary';
-        letter-spacing: 1%;
+        letter-spacing: 2px;
         font-size: 13px;
         padding: 1px 0 0 10px;
     }
@@ -949,11 +950,11 @@ table {
     .buttonTag {
         width: 70px;
         height: 30px;
-        margin: 5px 2px 5px 2px ;
+        margin: 5px 2px 5px 2px;
         font-size: 12px;
         letter-spacing: 2.5px;
         font-weight: 500;
-        counter-reset: #333;
+        color: #333;
         background-color: rgba(255, 227, 184, 0.5);
         border: none;
         border-radius: 3px;
@@ -995,5 +996,10 @@ table {
         margin: 10px auto 0;
         border: 2px solid rgba(255, 227, 184, 0.5);
         border-radius: 10px;
+    }
+
+    #mapBox iframe {
+        width: 100%;
+        height: 100%;
     }
 }
